--- a/html-css/projetos/projeto01/index.html
+++ b/html-css/projetos/projeto01/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="">
     <title>Parque Estadual Ilha Bela</title>
-    <meta name="robots" content="nofollow">
+    <meta name="robots" content="nofollow, no index">
     <link rel="stylesheet" href="style.css">
    
 </head>
