--- a/html-css/projetos/projeto003/index.html
+++ b/html-css/projetos/projeto003/index.html
@@ -12,26 +12,26 @@
         <img class="logo" src="imagens/logo.png" alt="logo">
         <nav>
             <a href="#sobre">Sobre</a>
-            <a href="#paes">Produtos</a>
-            <a href="#bolos">Contato</a>
+            <a href="#produtos">Produtos</a>
+            <a href="#contato">Contato</a>
         </nav>
     </div>
-    <div>
+    <div id="sobre">
         <h1 class="negrito, borda">O melhor de nossos pães e bolos para você</h1>
 
         <h2 class="texto-laranja">Desde 2001, o lugar mais gostoso da cidade</h2>
 
-        <img src="imagens/produtos-padaria.jpg" alt="sobre" >
+        <img src="imagens/produtos-padaria.jpg" alt="produtos" >
     </div>
 
-    <div class="bkg">
+    <div class="bkg" id="produtos">
         <h1 class="negrito">Veja nossos produtos abaixo</h1>
 
         <h2 class="negrito">Pães</h2>
 
         <p>Temos um processo de fabricação 100% caseiro. Esse foi um dos maiores motivos que fizeram com que a Padaria Plus crescesse com as proporções que temos hoje. Temos um pão único de pura qualidade.</p>
 
-        <img class="s2" src="imagens/paes.jpg" alt="paes">
+        <img class="s2" src="imagens/paes.jpg"alt="pães">
 
         <h1 class="negrito">Bolos</h1>
         <p>Uma viagem para a Itália nos fez conhecer alguns ingredientes que são essenciais para que a massa do bolo fique macia e gostosa. Hoje temos um produto incomparável.</p>
@@ -40,7 +40,7 @@
 
     </div>
 
-    <div>
+    <div id="contato">
         <h1 class="negrito">Contato</h1>
 
         <h4>Estamos localizados na Avenida Santos Agoz Nº 456</h4>
