--- a/html-css/projetos/projeto006/index.html
+++ b/html-css/projetos/projeto006/index.html
@@ -70,7 +70,7 @@
 
             <ul type="none" >
                 <li><a href="mailto:corretores@email.com">Escritorio Barra da tijuca</a></li>
-                <li><a href="mailto:corretores@email.com">Escritorio Barra da tijuca</a></li>
+                <li><a href="mailto:corretores@email.com">Escritorio Centro/RJ</a></li>
                 <li><a href="mailto:corretores@email.com">Escritorio Méier</a></li>
             </ul>
 
