--- a/html-css/projetos/projeto007/index.html
+++ b/html-css/projetos/projeto007/index.html
@@ -71,11 +71,11 @@
                 </ul>
             </div>
 
-            <div class="fixed">
+            <section class="fixed">
                 <a href="https://www.linkedin.com/in/bruno-raphael-0984601b3/" target="_blank"><img class="img1" src="logo/LinkedIn-Logos/LI-In-Bug.png" alt="LinkedIn-Logos"></a>
 
                 <a href="https://github.com/BrunoRaphael2002" target="_blank"><img  calss="img2" src="logo/github-mark/github-mark.png" alt="github-mark"></a>
-            </div>
+            </section>
 
 
 
