--- a/html-css/projetos/projeto010/tabeladepreços.html
+++ b/html-css/projetos/projeto010/tabeladepreços.html
@@ -8,17 +8,23 @@
     <link rel="stylesheet" href="estilo/reset.css">
     <link rel="stylesheet" href="estilo/style.css">
 
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700;800;900&display=swap" rel="stylesheet">
+
     <title>AlfaTech</title>
 </head>
 <body>
 
+
+    <header>
 <figure>
     <img src="assets/logo-icone-escuro.png" alt="">
 </figure>
 
 
 
-	<header>
+	
          <h1>AlfaTech</h1>
          <p>Soluções em hospedagem</p>
          <nav>
