atualização do projeto

--- a/html-css/projetos/projeto010/index.html
+++ b/html-css/projetos/projeto010/index.html
@@ -28,7 +28,7 @@
     </figure>
 
    
-    <nav>
+    <nav class="box-menu">
         <ul class="menu">
             <li><a href="tabeladepreços.html">INFORMAÇÕES</a></li>
             <li><a href="">PLANOS</a></li>
@@ -53,12 +53,16 @@
         </div>
 
         <div class="anuncio-01">
-            <h3>Hospede o seu site por apenas R$29 por mês.</h3>
-            <p>Também temos planos gratuitos. Adquira já o seu.</p>
-            <button>
-                <a href="">TABELA DE PREÇOS</a>
+            <div class="conteudo-anuncio-01">
+                <h3>Hospede o seu site por apenas R$29 por mês.</h3>
+                <p>Também temos planos gratuitos. Adquira já o seu.</p>
+            </div>
+            <button class="botao-anuncio" >
+                <a  href="">TABELA DE PREÇOS</a>
             </button>
         </div>
+
+       
 
         <section class="informações">
 
