--- a/algoritimos-JavaScript/Exercicos/aula06.html
+++ b/algoritimos-JavaScript/Exercicos/aula06.html
@@ -16,6 +16,7 @@
         >= Maior ou igual
         < Menor
         <= Menor ou igual
+        !== Diferente porem leva em conta o tipo do dado
     -->
     <script>
         var n1 = prompt("Digite o Primeiro numero");
