mudança no alert

--- a/algoritimos-JavaScript/Exercicos/mini_projeto_test/testando_array.html
+++ b/algoritimos-JavaScript/Exercicos/mini_projeto_test/testando_array.html
@@ -223,7 +223,7 @@
 
 
     <script> var jogos = ["Cod_warzone" , "Rocket_league", "Forza_horizon"];
-    alert(jogos[1])
+    //alert(jogos[1]);
      //top funciona!
     </script>
 </body>
