--- a/algoritimos-JavaScript/projetos/G15/index.html
+++ b/algoritimos-JavaScript/projetos/G15/index.html
@@ -35,7 +35,8 @@
        overflow: hidden;
        font-family: var(--font-padrao);
        background-repeat: no-repeat;
-
+       width: 100vw;
+       height: 100%;
       
     }
 
