--- a/algoritimos-JavaScript/projetos/G15/index.html
+++ b/algoritimos-JavaScript/projetos/G15/index.html
@@ -37,6 +37,7 @@
        background-repeat: no-repeat;
        width: 100vw;
        height: 100%;
+       background-color: #b67831;
       
     }
 
