--- a/html-css/projetos/projeto012/index.html
+++ b/html-css/projetos/projeto012/index.html
@@ -21,8 +21,8 @@
                     </div>
                     <nav class="topo-links">
                         <ul><a href="pagina02.html"><li>Sorteios</li></a></ul>
-                        <ul><a href=""><li>Ganhadores</li></a></ul>
-                        <ul><a href=""><li>Meus Numeros</li></a></ul>
+                        <ul><a href="pagina03.html"><li>Ganhadores</li></a></ul>
+                        <ul><a href="pagina04.html"><li>Meus Numeros</li></a></ul>
                     </nav>
         </header>
 
