--- a/html-css/projetos/projeto012/pagina02.html
+++ b/html-css/projetos/projeto012/pagina02.html
@@ -102,8 +102,8 @@
 
         <footer>
             <section class="icons">
-                <img src="/assets/whatzap.png" alt="">
-                <img src="/assets/telegram.png" alt="">
+                <img src="/assets/whatzap.png" alt="whatzap">
+                <img src="/assets/telegram.png" alt="telegram">
             </section>
             <section class="texto-rodape"> <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. !</p>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. .</p></section>
