--- a/html-css/projetos/projeto012/index.html
+++ b/html-css/projetos/projeto012/index.html
@@ -90,8 +90,8 @@
         <footer>
            
                 <section class="icons">
-                    <img src="/assets/whatzap.png" alt="whatzap">
-                    <img src="/assets/telegram.png" alt="telegram">
+                    <img src="assets/whatzap.png" alt="whatzap">
+                    <img src="assets/telegram.png" alt="telegram">
                 </section>
                 <section class="texto-rodape"> <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. !</p>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. .</p></section>
